--- a/frontend/styles/enter.module.css
+++ b/frontend/styles/enter.module.css
@@ -1,7 +1,7 @@
 .enterPage {
   position: relative;
   height: 100vh;
-  overflow: hidden;
+  
 }
 
 .content {
@@ -22,4 +22,21 @@
 .content p {
   font-size: 1.5rem;
   margin-bottom: 2rem;
+}
+
+.navbar {
+  display: flex;
+  padding: 1rem 1rem; 
+  background-color: #ffffff; 
+  position: fixed; 
+  top: 0;
+  left: 0;
+  width: 100%; 
+  z-index: 11;
+}
+
+.brand {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #000000;
 }
