--- a/frontend/styles/enter.module.css
+++ b/frontend/styles/enter.module.css
@@ -40,3 +40,47 @@
   font-weight: bold;
   color: #000000;
 }
+
+.mainContent {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 5rem;
+}
+
+.searchBox {
+  display: flex;
+  width: 100vh;
+  height: 6vh;
+  border-radius: 50px;
+  border-color: rgb(29, 192, 65);
+  border-width: 3PX;
+  box-shadow: #000000;
+}
+
+.button {
+    background-color: #1DC041;
+    color: white;
+    border: none;
+    border-radius: 50px;
+    padding: 0.5rem 1rem;
+    font-size: 1.5rem;
+    cursor: pointer;
+  
+}
+
+.popularTopic{
+  margin-left: 1rem;
+  margin-bottom: 0.5rem;
+}
+
+.carouselSlide{
+  display: flex;
+  justify-content: center;
+
+}
+
+.popularCarouselCard{
+  width: 25%;
+  height: 50%;
+  padding: 1rem;
+}
