created restaurant page structure

--- a/frontend/styles/enter.module.css
+++ b/frontend/styles/enter.module.css
@@ -69,7 +69,11 @@
 }
 
 .popularTopic{
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
   margin-left: 1rem;
+  margin-right: 1rem;
   margin-bottom: 0.5rem;
 }
 
