--- a/frontend/styles/restaurantPage.module.css
+++ b/frontend/styles/restaurantPage.module.css
@@ -1,5 +1,20 @@
+.navbar {
+    display: flex;
+    padding: 1rem 1rem; 
+    background-color: #ffffff; 
+    position: fixed; 
+    top: 0;
+    left: 0;
+    width: 100%; 
+    z-index: 11;
+  }
+  .brand {
+    font-size: 2rem;
+    font-weight: bold;
+    color: #000000;
+  }
 .searchBox{
-    margin-top: 2rem;
+    margin-top: 6rem;
     display: flex;
     justify-content: center;
     
