--- a/frontend/styles/enter.module.css
+++ b/frontend/styles/enter.module.css
@@ -5,6 +5,10 @@
 }
 
 .content {
+  border-radius: 20px;
+  padding-top: 1rem;
+  padding-bottom: 1.5rem;
+  background-color: #6e6d6db4;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -43,7 +47,8 @@
 
 .mainContent {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   margin-bottom: 5rem;
 }
 
