some ui updates

--- a/frontend/styles/[restaurantId].module.css
+++ b/frontend/styles/[restaurantId].module.css
@@ -23,5 +23,5 @@
     flex-direction: column;
     width: 40rem;
     height: auto;
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(103, 241, 133, 0.219);
   }
