--- a/frontend/styles/restaurantPage.module.css
+++ b/frontend/styles/restaurantPage.module.css
@@ -59,7 +59,7 @@
     margin-top: 2rem;
     margin-left: 2rem;
     width: 20%;
-    height: 80vh;
+    height: fit-content;
     background-color: #0ee24394;
     border-radius: 10px;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
